[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["CattleProdigy <paulschroeder90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
nalgebra = "0.29"
petgraph = "0.6"

[[bin]]
name = "aoc_01"
path = "src/bin/aoc_01.rs"
